Modification to the 'ABOUT section'

--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@ Free Bootstrap 5 HTML Template
                                 <div class="about-info">
                                     <small class="small-title">About <strong class="text-warning">02/05</strong></small>
 
-                                    <h2 class="mb-3">Consulting Agency</h2>
+                                    <h2 class="mb-3">Consulting Services</h2>
 
-                                    <h5 class="mb-3">Helping small businesses since 2001</h5>
+                                    <h5 class="mb-3">Helping small businesses to harness their full Potentials</h5>
 
-                                    <p>Waso Strategy is a Bootstrap 5 HTML template for your business. You may use this template for any purpose. You may not redistribute the template ZIP file on any other website.</p>
+                                    <p>MarketPeak provides reliable roadmaps that you can trust. Our people are highly experienced and dedicated. Trust us with your business concerns and you will be happy for it.</p>
 
                                     <p>You may support a little PayPal donation to Tooplate by visiting our <a href="https://www.tooplate.com/contact">contact page</a>. Thank you.</p>
                                 </div>
